--- a/MiApi/appsettings.json
+++ b/MiApi/appsettings.json
@@ -1,12 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "OracleDbConnection": "User Id=DESARROLLO;Password=DEsa,2019.;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=ORACLESCAN)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=AYTOCC)))"
     }
-  },
-  "ConnectionStrings": {
-    "OracleDbConnection": "User Id=DESARROLLO;Password=DEsa,2019.;Data Source=oracleracl:1521/AYTOCC1"
-  },
-  "AllowedHosts": "*"
-}
+    }
